js/js.translator/testData/incremental/invalidation/implicitExport/lib1/l1.0.kt
@JsExport
fun consumeCollection(map: Map<String, String>): String? {
    return map["foo"]
}
